objects/ssot__WorkerCompensationCoverageClass__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Worker Comp Coverage Class Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyCoverageId__c</fullName>
        <label>Insurance Policy Coverage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyId__c</fullName>
        <label>Insurance Policy</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PremiumAmount__c</fullName>
        <label>Premium Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalExposureAmount__c</fullName>
        <label>Total Exposure Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WorkerCompensationClass__c</fullName>
        <label>Worker Compensation Class</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkerCount__c</fullName>
        <label>Worker Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WorkerLocationId__c</fullName>
        <label>Worker Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512780092_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkerCompensationCoverageClass_Insu_rel</label>
        <referenceTo>ssot__InsurancePolicyCoverage__dlm</referenceTo>
        <relationshipLabel>WorkerCompensationCoverageClass_Insu_rel</relationshipLabel>
        <relationshipName>rel_1739512780092_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512783345_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WorkerCompensationCoverageClass_Insu_rel</label>
        <referenceTo>ssot__InsurancePolicy__dlm</referenceTo>
        <relationshipLabel>WorkerCompensationCoverageClass_Insu_rel</relationshipLabel>
        <relationshipName>rel_1739512783345_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>